# hed

./: .gitignore  .hedlog  .project.gf  AGENTS.md  CLAUDE.md  CMakeLists.txt  IMPROVEMENTS.md  LICENSE  Makefile  README.md  TODOS.md  WISHLIST.md  compile_flags.txt  install.sh  makefile  nfpm.yaml  readme.md  tags  test.txt  todo_dirmark.md
.github/: copilot-instructions.md
.github/workflows/: c-cpp.yml  pages-repo.yml
include/: ansi.h  bottom_ui.h  buf_helpers.h  buffer.h  commands.h  editor.h  hed.h  hooks.h  keybinds.h  quickfix.h  registers.h  terminal.h  ts.h  window.h
packaging/: README.md  hed-signing-key.asc  repo-index.html
packaging/arch/: .SRCINFO  PKGBUILD
packaging/void/: template
plugins/aishell/: README.md  aishell.c  aishell.h
plugins/auto_pair/: README.md  auto_pair.c  auto_pair.h
plugins/autosave/: README.md  autosave.c  autosave.h
plugins/claude/: README.md  claude.c  claude.h
scripts/: gen-man.sh  gen_themes.py
src/: abuf.c  bottom_ui.c  buf_helpers.c  buf_helpers.h  buffer.c  command_mode.c  command_mode.h  commands.c  commands.h  config.c  config.h  dired.c  dired.h  editor.c  editor.h  fzf.c  fzf.h  hed.h  helpers.h  history.c  history.h  hook_builtins.c  hook_builtins.h  hooks.c  hooks.h  input.c  input.h  keybinds.c  keybinds.h  keybinds_builtins.c  keybinds_builtins.h  log.c  log.h  lsp.c  lsp.h  lsp_hooks.c  lsp_hooks.h  macros.c  macros.h  main.c  (+22 more)
tasks/: done_macro_system.md  todo_ctags.md
test/: Makefile  makefile  test_helpers.c  test_helpers.h  test_input.c  test_textobj  test_textobj.c
ts/: ts_lang_install.c
(+323 files in other folders)
